// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchComponent should compile correctly when a search returns no results 1`] = `
<app-search-test
  breadcrumbs={[Function Array]}
  clearResults={[Function Function]}
  initialFormValues={[Function Object]}
  pageSize={[Function Number]}
  postalReply={[Function Function]}
  results={[Function Array]}
  search={[Function Function]}
  startFrom="0"
  startFromChange={[Function Function]}
  totalResults="0"
  viewApplication={[Function Function]}
  viewApplicationAtAGlance={[Function Function]}
  viewCrownCourtCase={[Function Function]}
  viewSjpCase={[Function Function]}
>
  <app-search>
    <app-breadcrumbs>
      <ol
        class="govuk-!-margin-bottom-2 govuk-breadcrumbs govuk-breadcrumbs__list"
        pdk-breadcrumb-list=""
        pdk-margin-bottom="2"
      >
        <li
          class="govuk-breadcrumbs__list-item"
          pdk-breadcrumb-list-item=""
        >
          <a
            class="govuk-breadcrumbs__link"
            href="/"
          >
             Home 
          </a>
        </li>
      </ol>
    </app-breadcrumbs>
    <h1
      class="govuk-heading-xl"
      pdk-typography="heading-xlarge"
    >
      Search
    </h1>
    <pdk-grid
      class="govuk-grid-row"
      container=""
    >
      <pdk-grid
        class="govuk-grid-column-one-third"
        one-third=""
      >
        <app-search-form>
           {
    "caseReference": "*"
  } 
        </app-search-form>
      </pdk-grid>
      <pdk-grid
        class="govuk-grid-column-two-thirds"
        two-thirds=""
      >
        <pdk-inset-text
          class="govuk-!-margin-top-0"
          pdk-margin-top="0"
        >
          <div
            class="govuk-inset-text"
          >
             There are no matching results. Try removing filters or double-checking your spelling. 
          </div>
        </pdk-inset-text>
      </pdk-grid>
    </pdk-grid>
  </app-search>
</app-search-test>
`;

exports[`SearchComponent should compile correctly when no search has taken place 1`] = `
<app-search-test
  breadcrumbs={[Function Array]}
  clearResults={[Function Function]}
  initialFormValues={[Function Object]}
  pageSize={[Function Number]}
  postalReply={[Function Function]}
  results={[Function Array]}
  search={[Function Function]}
  startFrom="0"
  startFromChange={[Function Function]}
  totalResults={[Function Number]}
  viewApplication={[Function Function]}
  viewApplicationAtAGlance={[Function Function]}
  viewCrownCourtCase={[Function Function]}
  viewSjpCase={[Function Function]}
>
  <app-search>
    <app-breadcrumbs>
      <ol
        class="govuk-!-margin-bottom-2 govuk-breadcrumbs govuk-breadcrumbs__list"
        pdk-breadcrumb-list=""
        pdk-margin-bottom="2"
      >
        <li
          class="govuk-breadcrumbs__list-item"
          pdk-breadcrumb-list-item=""
        >
          <a
            class="govuk-breadcrumbs__link"
            href="/"
          >
             Home 
          </a>
        </li>
      </ol>
    </app-breadcrumbs>
    <h1
      class="govuk-heading-xl"
      pdk-typography="heading-xlarge"
    >
      Search
    </h1>
    <pdk-grid
      class="govuk-grid-row"
      container=""
    >
      <pdk-grid
        class="govuk-grid-column-one-third"
        one-third=""
      >
        <app-search-form>
           {
    "caseReference": "*"
  } 
        </app-search-form>
      </pdk-grid>
      <pdk-grid
        class="govuk-grid-column-two-thirds"
        two-thirds=""
      >
        <pdk-inset-text
          class="govuk-!-margin-top-0"
          pdk-margin-top="0"
        >
          <div
            class="govuk-inset-text"
          >
             Use filters to make a search. 
          </div>
        </pdk-inset-text>
      </pdk-grid>
    </pdk-grid>
  </app-search>
</app-search-test>
`;

exports[`SearchComponent should display validation errors from the form 1`] = `
<app-search-test
  breadcrumbs={[Function Array]}
  clearResults={[Function Function]}
  initialFormValues={[Function Object]}
  pageSize={[Function Number]}
  postalReply={[Function Function]}
  results={[Function Array]}
  search={[Function Function]}
  startFrom="0"
  startFromChange={[Function Function]}
  totalResults={[Function Number]}
  viewApplication={[Function Function]}
  viewApplicationAtAGlance={[Function Function]}
  viewCrownCourtCase={[Function Function]}
  viewSjpCase={[Function Function]}
>
  <app-search>
    <app-breadcrumbs>
      <ol
        class="govuk-!-margin-bottom-2 govuk-breadcrumbs govuk-breadcrumbs__list"
        pdk-breadcrumb-list=""
        pdk-margin-bottom="2"
      >
        <li
          class="govuk-breadcrumbs__list-item"
          pdk-breadcrumb-list-item=""
        >
          <a
            class="govuk-breadcrumbs__link"
            href="/"
          >
             Home 
          </a>
        </li>
      </ol>
    </app-breadcrumbs>
    <h1
      class="govuk-heading-xl"
      pdk-typography="heading-xlarge"
    >
      Search
    </h1>
    <pdk-grid
      class="govuk-grid-row"
      container=""
    >
      <pdk-grid
        class="govuk-grid-column-one-third"
        one-third=""
      >
        <app-search-form>
           {
    "caseReference": "*"
  } 
        </app-search-form>
      </pdk-grid>
      <pdk-grid
        class="govuk-grid-column-two-thirds"
        two-thirds=""
      >
        <pdk-error-summary
          focusonchange=""
        >
          <div
            class="govuk-error-summary"
            tabindex="-1"
          >
            <div
              aria-labelledby="pdk-error-sumamry-GENERATED_ID"
              role="alert"
            >
              <h2
                class="govuk-error-summary__title"
                id="pdk-error-sumamry-GENERATED_ID"
              >
                There is a problem
              </h2>
              <div
                class="govuk-error-summary__body"
              >
                <ul
                  class="govuk-list govuk-error-summary__list"
                >
                  <li>
                    <a
                      href="javascript:void(0)"
                    >
                       Error! 
                    </a>
                  </li>
                </ul>
              </div>
            </div>
          </div>
        </pdk-error-summary>
      </pdk-grid>
    </pdk-grid>
  </app-search>
</app-search-test>
`;

exports[`SearchComponent when application results exist should compile correctly 1`] = `
<app-search-test
  breadcrumbs={[Function Array]}
  clearResults={[Function Function]}
  initialFormValues={[Function Object]}
  pageSize={[Function Number]}
  postalReply={[Function Function]}
  results={[Function Array]}
  search={[Function Function]}
  startFrom="0"
  startFromChange={[Function Function]}
  totalResults={[Function Number]}
  viewApplication={[Function Function]}
  viewApplicationAtAGlance={[Function Function]}
  viewCrownCourtCase={[Function Function]}
  viewSjpCase={[Function Function]}
>
  <app-search>
    <app-breadcrumbs>
      <ol
        class="govuk-!-margin-bottom-2 govuk-breadcrumbs govuk-breadcrumbs__list"
        pdk-breadcrumb-list=""
        pdk-margin-bottom="2"
      >
        <li
          class="govuk-breadcrumbs__list-item"
          pdk-breadcrumb-list-item=""
        >
          <a
            class="govuk-breadcrumbs__link"
            href="/"
          >
             Home 
          </a>
        </li>
      </ol>
    </app-breadcrumbs>
    <h1
      class="govuk-heading-xl"
      pdk-typography="heading-xlarge"
    >
      Search
    </h1>
    <pdk-grid
      class="govuk-grid-row"
      container=""
    >
      <pdk-grid
        class="govuk-grid-column-one-third"
        one-third=""
      >
        <app-search-form>
           {
    "caseReference": "*"
  } 
        </app-search-form>
      </pdk-grid>
      <pdk-grid
        class="govuk-grid-column-two-thirds"
        two-thirds=""
      >
        <pdk-inset-text
          class="govuk-!-margin-top-0"
          pdk-margin-top="0"
        >
          <div
            class="govuk-inset-text"
          >
             1 result 
          </div>
        </pdk-inset-text>
        <div
          data-test-id="search-result"
        >
          <app-search-result-application>
             {
    "caseId": "*",
    "caseType": "APPLICATION"
  } 
          </app-search-result-application>
        </div>
      </pdk-grid>
    </pdk-grid>
  </app-search>
</app-search-test>
`;

exports[`SearchComponent when case results exist should compile correctly 1`] = `
<app-search-test
  breadcrumbs={[Function Array]}
  clearResults={[Function Function]}
  initialFormValues={[Function Object]}
  pageSize={[Function Number]}
  postalReply={[Function Function]}
  results={[Function Array]}
  search={[Function Function]}
  startFrom="0"
  startFromChange={[Function Function]}
  totalResults={[Function Number]}
  viewApplication={[Function Function]}
  viewApplicationAtAGlance={[Function Function]}
  viewCrownCourtCase={[Function Function]}
  viewSjpCase={[Function Function]}
>
  <app-search>
    <app-breadcrumbs>
      <ol
        class="govuk-!-margin-bottom-2 govuk-breadcrumbs govuk-breadcrumbs__list"
        pdk-breadcrumb-list=""
        pdk-margin-bottom="2"
      >
        <li
          class="govuk-breadcrumbs__list-item"
          pdk-breadcrumb-list-item=""
        >
          <a
            class="govuk-breadcrumbs__link"
            href="/"
          >
             Home 
          </a>
        </li>
      </ol>
    </app-breadcrumbs>
    <h1
      class="govuk-heading-xl"
      pdk-typography="heading-xlarge"
    >
      Search
    </h1>
    <pdk-grid
      class="govuk-grid-row"
      container=""
    >
      <pdk-grid
        class="govuk-grid-column-one-third"
        one-third=""
      >
        <app-search-form>
           {
    "caseReference": "*"
  } 
        </app-search-form>
      </pdk-grid>
      <pdk-grid
        class="govuk-grid-column-two-thirds"
        two-thirds=""
      >
        <pdk-inset-text
          class="govuk-!-margin-top-0"
          pdk-margin-top="0"
        >
          <div
            class="govuk-inset-text"
          >
             1 result 
          </div>
        </pdk-inset-text>
        <div
          data-test-id="search-result"
        >
          <app-search-result-case>
             {
    "caseId": "*",
    "caseType": "PROSECUTION"
  } 
          </app-search-result-case>
        </div>
      </pdk-grid>
    </pdk-grid>
  </app-search>
</app-search-test>
`;

exports[`SearchComponent when the the total results exceeds the page size should display the pagination 1`] = `
<app-search-test
  breadcrumbs={[Function Array]}
  clearResults={[Function Function]}
  initialFormValues={[Function Object]}
  pageSize={[Function Number]}
  postalReply={[Function Function]}
  results={[Function Array]}
  search={[Function Function]}
  startFrom="0"
  startFromChange={[Function Function]}
  totalResults={[Function Number]}
  viewApplication={[Function Function]}
  viewApplicationAtAGlance={[Function Function]}
  viewCrownCourtCase={[Function Function]}
  viewSjpCase={[Function Function]}
>
  <app-search>
    <app-breadcrumbs>
      <ol
        class="govuk-!-margin-bottom-2 govuk-breadcrumbs govuk-breadcrumbs__list"
        pdk-breadcrumb-list=""
        pdk-margin-bottom="2"
      >
        <li
          class="govuk-breadcrumbs__list-item"
          pdk-breadcrumb-list-item=""
        >
          <a
            class="govuk-breadcrumbs__link"
            href="/"
          >
             Home 
          </a>
        </li>
      </ol>
    </app-breadcrumbs>
    <h1
      class="govuk-heading-xl"
      pdk-typography="heading-xlarge"
    >
      Search
    </h1>
    <pdk-grid
      class="govuk-grid-row"
      container=""
    >
      <pdk-grid
        class="govuk-grid-column-one-third"
        one-third=""
      >
        <app-search-form>
           {
    "caseReference": "*"
  } 
        </app-search-form>
      </pdk-grid>
      <pdk-grid
        class="govuk-grid-column-two-thirds"
        two-thirds=""
      >
        <pdk-inset-text
          class="govuk-!-margin-top-0"
          pdk-margin-top="0"
        >
          <div
            class="govuk-inset-text"
          >
             11 results 
          </div>
        </pdk-inset-text>
        <pdk-pagination
          data-current-page="1"
          data-page-size="10"
          data-total-results="11"
        >
          <div
            class="pdk-pagination"
          >
            <nav
              aria-label="Pagination"
              class="govuk-pagination"
            >
              <div
                class="pdk-pagination__arrow-placeholder"
              />
              <div
                class="govuk-pagination__list govuk-!-margin-left-1 govuk-!-margin-right-1"
                pdk-margin-horizontal="1"
              >
                <div
                  class="govuk-pagination__item govuk-!-margin-left-1 govuk-!-margin-right-1 govuk-pagination__item--current"
                  pdk-margin-horizontal="1"
                >
                  <span
                    aria-label="Current page, page 1"
                    class="pdk-pagination__item__active"
                    role="link"
                    tabindex="0"
                  >
                    1
                  </span>
                </div>
                <div
                  class="govuk-pagination__item govuk-!-margin-left-1 govuk-!-margin-right-1"
                  pdk-margin-horizontal="1"
                >
                  <a
                    aria-label="Go to page 2"
                    class="govuk-pagination__link govuk-link"
                    href="javascript:void(0)"
                    pdk-link=""
                  >
                     2 
                  </a>
                </div>
              </div>
              <div
                class="govuk-pagination__next"
              >
                <a
                  aria-label="Go to next page of results"
                  class="govuk-link govuk-pagination__link"
                  href="javascript:void(0)"
                  rel="Next"
                >
                  <span
                    class="govuk-pagination__link-title"
                  >
                     Next 
                  </span>
                  <svg
                    aria-hidden="true"
                    class="govuk-pagination__icon govuk-pagination__icon--next"
                    focusable="false"
                    height="13"
                    viewBox="0 0 15 13"
                    width="15"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="m8.107-0.0078125-1.4136 1.414 4.2926 4.293h-12.986v2h12.896l-4.1855 3.9766 1.377 1.4492 6.7441-6.4062-6.7246-6.7266z"
                    />
                  </svg>
                </a>
              </div>
            </nav>
          </div>
        </pdk-pagination>
      </pdk-grid>
    </pdk-grid>
  </app-search>
</app-search-test>
`;
